modify scan fignerprint touch

--- a/auto-tool-520/citApk/MeigRS32/app/src/main/res/layout/activity_touch_test.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/res/layout/activity_touch_test.xml
@@ -6,6 +6,7 @@
     android:background="@color/pop_txt_bg"
     android:orientation="vertical"
     android:overScrollMode="never"
+    android:focusableInTouchMode="true"
     tools:context=".activity.TouchTestActivity">
 
     <include
