--- a/testDemo/mc574/CameraDemo-setResolutionRatio-2023-0215/app/src/main/res/layout/activity_main.xml
+++ b/testDemo/mc574/CameraDemo-setResolutionRatio-2023-0215/app/src/main/res/layout/activity_main.xml
@@ -7,60 +7,73 @@
     tools:context=".MainActivity">
 
     <TextureView
+        android:id="@+id/textureView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/textureView"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ttttt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="拍照"
-        android:id="@+id/photoButton"
-        android:onClick="takePicture_onClick"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="开启预览"
-            android:id="@+id/startPreviewButton"
-            android:onClick="startPreview_onClick"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="停止预览"
-            android:id="@+id/stopPreviewButton"
-            android:onClick="stopPreview_onClick"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/settings"
-        android:layout_width="70dp"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="12dp"
-        android:gravity="center_vertical|right"
-        android:orientation="vertical"
-        android:padding="@dimen/pad">
-        <TextView
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="241dp">
+
+        <Button
+            android:id="@+id/photoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="@string/setting_title"/>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:onClick="takePicture_onClick"
+            android:text="拍照" />
+
+        <Button
+            android:id="@+id/startPreviewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:onClick="startPreview_onClick"
+            android:text="开启预览" />
+
+        <Button
+            android:id="@+id/stopPreviewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:onClick="stopPreview_onClick"
+            android:text="停止预览" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/settings"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:layout_alignParentLeft="true" >
+
+            <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignParentBottom="true"
+           android:layout_centerHorizontal="true"
+           android:src="@drawable/settings" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+       <!--ImageView
+           android:id="@+id/settings"
+           android:layout_width="50dp"
+           android:layout_height="50dp"
+           android:layout_alignParentBottom="true"
+           android:layout_centerHorizontal="true"
+           android:layout_weight="5"
+           android:src="@drawable/settings" /-->
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
